<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskEditActivity">

    <include
        android:id="@+id/toolbar_taskEdit"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightBound"
        app:layout_constraintStart_toStartOf="@+id/leftBound"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_taskEdit">

        <TextView
            android:id="@+id/taskEdit_txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="bottom"
            android:text="@string/name"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/taskEdit_editTxtTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/enter_a_name"
            android:inputType="textPersonName"
            android:textSize="@dimen/_16sdp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <TextView
            android:id="@+id/taskEdit_txtDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="bottom"
            android:text="@string/description"
            android:textSize="@dimen/_14sdp" />

        <EditText
            android:id="@+id/taskEdit_editTxtTaskDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/enter_a_description"
            android:inputType="textPersonName"
            android:textSize="@dimen/_16sdp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="9">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                tools:ignore="NestedWeights">

                <Button
                    android:id="@+id/taskEdit_btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/delete"
                    android:textSize="@dimen/_14sdp"
                    android:visibility="invisible"
                    tools:visibility="invisible" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3" />

            <Button
                android:id="@+id/taskEdit_btnSave"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:text="@string/save"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>