<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentOffWhite"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".ChooseFlipperFragment"
    tools:layout="@layout/fragment_choose_flipper">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/colorTransparentNavyBlue"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toTopOf="@+id/fragUpperBound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="@dimen/_60sdp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/item_child_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/_4sdp"
            android:text="@string/child_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_child_order"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|end"
            android:paddingEnd="@dimen/_8sdp"
            android:text="@string/order"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chooseFlipper_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80"
        app:layout_constraintBottom_toTopOf="@+id/fragLowerBound"
        app:layout_constraintTop_toTopOf="@+id/fragUpperBound" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:weightSum="14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragLowerBound">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/chooseFlipper_btnSelectCanceled"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/cancel"
            android:textSize="@dimen/_13sdp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <Button
            android:id="@+id/chooseFlipper_btnSelectNoOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:backgroundTint="@color/colorMainGreen"
            android:text="@string/select_no_one"
            android:textSize="@dimen/_13sdp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>